--- a/swiftLearn/style.css
+++ b/swiftLearn/style.css
@@ -164,11 +164,13 @@ header {
 
     .hero_absMain {
         padding: 1rem 2rem;
+
         h1 {
             color: white;
             font-weight: 700;
             font-size: clamp(2rem, 2.3rem, 5vw);
             margin-bottom: 16px;
+            width: 90%;
 
             @media screen and (max-width: 768px) {
                 font-size: 1.6rem;
